# fbxtools

./: CMakeLists.txt  README.md  build.sh  package.json  pnpm-lock.yaml  test.sh
cmake/: FindFBX.cmake
src/3rd/: cxxopts.hpp
src/convert/: CMakeLists.txt  main.cpp
src/convert/Common/: ImportExport.cxx  ImportExport.h
src/fbx2json/: CMakeLists.txt  fbx2json.h  fbx_common.cpp  fbx_common.h  main.cpp
test/: readfbxjson.ts  test.fbx  test.json
